basement/06-minio/01-minio-traefik-middleware.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bright-minio-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: minio.idc.bright.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bright-minio
                port:
                  number: 9000
